# cofy-api-template

./: .env.example  Dockerfile  README.md  db.py  main.py  pyproject.toml  worker.py
.github/workflows/: test-container.yml
